# agent-coherence

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  REPRODUCE.md  pyproject.toml  reproduce.sh
.github/workflows/: ci.yml  publish.yml
benchmarks/: expected.json
benchmarks/langgraph_real/: _scaffold.py  bench_code_review.py  bench_high_churn.py  bench_planner.py
benchmarks/results/: artifact_scaling.json  step_scaling.json
benchmarks/results/canonical/: SUMMARY.md  analysis_canonical.html  analysis_canonical.json  churn_canonical.html  churn_canonical.json  dev_canonical.html  dev_canonical.json  manifest.json  planning_canonical.html  planning_canonical.json
benchmarks/results/langgraph_real/: 3-agent_code_review_(write-moderate).json  4-agent_high-churn_(write-heavy).json  4-agent_planning_pipeline_(read-heavy).json
benchmarks/results/step5/: BASELINE_VERIFICATION.md  SUMMARY.md  access_always_read.html  access_always_read.json  access_conditional_injection.html  access_conditional_injection.json  access_pointer.html  access_pointer.json  large_artifact_reasoning.html  large_artifact_reasoning.json  manifest.json  parallel_editing.html  parallel_editing.json  planning_canonical.html  planning_canonical.json  read_heavy.html  read_heavy.json  write_heavy.html  write_heavy.json
benchmarks/scenarios/: access_always_read.yaml  access_conditional_injection.yaml  access_pointer.yaml  analysis_canonical.yaml  churn_canonical.yaml  dev_canonical.yaml  large_artifact_reasoning.yaml  parallel_editing.yaml  planning_canonical.yaml  read_heavy.yaml  write_heavy.yaml
doc/: UNIFIED_IMPLEMENTATION_CHECKLIST.md  UNIFIED_IMPLEMENTATION_PLAN.md
docs/: agent-coherence-approach.md  ccsstore.md  guide.md  why-coherence-matters.md
docs/proposals/: state_transitions_log.md
examples/: multi_agent_planning.py
examples/code_review/: main.py
examples/langgraph_planner/: main.py
examples/research_pipeline/: main.py
examples/shared_codebase/: main.py
src/ccs/: __init__.py
src/ccs/adapters/: __init__.py  autogen.py  base.py  ccsstore.py  crewai.py  events.py  langgraph.py
src/ccs/agent/: __init__.py  cache.py  runtime.py
src/ccs/artifacts/: __init__.py  diff_engine.py
src/ccs/bus/: __init__.py  event_bus.py
src/ccs/cli/: __init__.py  benchmark.py  compare.py  simulate.py
src/ccs/coordinator/: __init__.py  registry.py  service.py
src/ccs/core/: __init__.py  clock.py  exceptions.py  granularity.py  hashing.py  invariants.py  states.py  types.py
src/ccs/hardening/: __init__.py  architecture.py
src/ccs/output/: __init__.py  report.py
src/ccs/simulation/: __init__.py  aggregation.py  bounds.py  consistency.py  engine.py  metrics.py  (+1 more)
tests/: test_adapters.py  test_agent_cache.py  test_agent_runtime.py  test_aggregation.py  test_architecture.py  test_benchmark_fixtures.py  test_benchmark_stage1.py  test_bounds.py  test_cli.py  test_cli_benchmark.py  test_clock.py  test_consistency.py  test_content_audit_log.py  test_coordinator.py  test_demo_script.py  test_diff_engine.py  test_engine.py  test_event_bus.py  test_granularity.py  test_invariants.py  test_network_sim.py  test_property_invariants.py  test_report.py  test_scenarios.py  test_state_transitions_log.py  test_states.py  test_strategies.py  test_transient_timeout.py  test_types.py  test_validation.py
tests/adapters/: test_ccsstore.py  test_ccsstore_benchmark.py  test_ccsstore_content_audit.py  test_ccsstore_state_log.py
tools/: benchmark_drift_check.py  benchmark_regression_smoke.py  check_architecture.py  check_readme_numbers.py  run_artifact_scaling.py  run_benchmarks.py  run_canonical_benchmarks.py  run_step5_benchmarks.py  run_step_scaling.py  verify_baseline.py
(+39 files in other folders)
